# SpaceVoxel

./: .gitignore  CMakeLists.txt  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  fragmentShader1.shader  fragmentShader2.shader  main.cpp  vertexShader2.shader
Include/: Camera.h  Input.h  Primitives.h  Shader.h
Shaders/: vsDefault.shader
Source/: Camera.cpp  Input.cpp  Primitives.cpp  Shader.cpp  main.cpp
